--- a/src/components/ui/Button/Button.module.css
+++ b/src/components/ui/Button/Button.module.css
@@ -7,7 +7,7 @@
 }
 
 .outline {
-  @apply bg-transparent text-accent-2 font-semibold border border-primary hover:border-transparent rounded;
+  @apply bg-transparent text-base font-semibold border border-accent-0 hover:border-transparent rounded;
 }
 
 .pill {
